[Desafio LuizaLabs - Quake3] Swwagger, ajustes no retorno dos metodos

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -2,3 +2,4 @@ file.invalid.extension=File extension not allowed
 file.empty=Empty file !
 file.received=File received with sucess
 invalid.parameter.request=Invalid parameter
+not.found=Data not found
