[Desafio LuizaLabs - Quake3] - Ajuste em testes unitarios (404 cenario) , arquivos de mensagem que ainda nao tinham sido commitados

--- a/src/main/resources/locale/messages_pt.properties
+++ b/src/main/resources/locale/messages_pt.properties
@@ -1,5 +1,5 @@
-file.invalid.extension=Extens√£o de arquivo n√£o permitida
+file.invalid.extension=Extens„o de arquivo n„o permitida
 file.empty=Arquivo vazio!
 file.received=Arquivo recebido com sucesso
-invalid.parameter.request=Parametro inv√°lido
-not.found=Dados n„o encontrados
+invalid.parameter.request=Parametro inv·lido
+not.found=Dado n„o encontrado
