[Desafio LuizaLabs - Quake3] - Testes de integracao, ajustes encoding mensagem, pequenos ajustes de codigo

--- a/src/main/resources/locale/messages_pt.properties
+++ b/src/main/resources/locale/messages_pt.properties
@@ -2,4 +2,4 @@ file.invalid.extension=Extensão de arquivo não permitida
 file.empty=Arquivo vazio!
 file.received=Arquivo recebido com sucesso
 invalid.parameter.request=Parametro inválido
-not.found=Dado não encontrado
+not.found=Dados não encontrados
